--- a/assets/html/answer.html
+++ b/assets/html/answer.html
@@ -26,7 +26,7 @@
             <h3>Nice user question</h3>
             <h2>And after much thought, here is my answer</h2>
             <h3>Nice answer</h3>
-            <a href="/homepage" class="button primary fit">Return to homepage</a></li>
+            <a href="/homepage" class="button styleb fit">Return to homepage</a></li>
 
         </div>
 
