--- a/assets/html/ask.html
+++ b/assets/html/ask.html
@@ -52,7 +52,7 @@
 
                     </div>
                 </form>
-                <a href="/answer" class="button primary fit">Ask question</a>
+                <a href="/answer" class="button styleb fit">Ask question</a>
             </div>
         </div>
 
