--- a/assets/html/questions.html
+++ b/assets/html/questions.html
@@ -10,9 +10,27 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="/static/css/main.css"/>
+    <link rel="stylesheet" href="/static/css/hack.css"/>
     <noscript>
         <link rel="stylesheet" href="/static/css/noscript.css"/>
     </noscript>
+    <style>
+        body {
+            /*color: #ffffff;*/
+            background: rgba(252, 252, 252, 0.7) url("https://live.staticflickr.com/2521/4198754159_cb8a1d7dae_k.jpg") no-repeat;
+            background-size: cover;
+            position: relative;
+            /*background: rgba(252, 252, 252, 0.7) url("https://images.creativemarket.com/0.1.0/ps/7453108/2362/1574/m1/fpnw/wm1/3-.jpg?1576164183&s=f533f17f4470965f792b705ff3bff1e6");*/
+        }
+    </style>
+    <style>
+        .layer {
+            overflow: auto; /* Добавляем полосы прокрутки */
+            max-width: 100vh; /* Ширина блока */
+            max-height: 70vh;
+            padding: 2rem 5rem 3rem 5rem !important;
+        }
+    </style>
 </head>
 <body class="is-preload">
 
@@ -22,19 +40,41 @@
     <!-- One -->
     <section
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-        <div class="content ">
-            <dl>
-                <dt>Question</dt>
-                <dd>
-                    <p>Answer</p>
-                </dd>
-                <dt>Question</dt>
-                <dd>
-                    <p>Answer</p>
-                </dd>
-            </dl>
 
+        <div class="content layer" style="font-weight: bold;">
             <dl>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
+                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
+                <dd>
+                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
+                </dd>
                 <dt>Question</dt>
                 <dd>
                     <p>Answer</p>
@@ -43,12 +83,12 @@
 
         </div>
         <div class="content">
-            <h1>Home Page</h1>
+            <h1 >Home Page</h1>
             <ul class="actions stacked fit">
-                <li><a href="/ask" class="button primary fit">Ask your question</a></li>
-                <li><a href="/questions" class="button primary fit">My question</a></li>
-                <li><a href="/users" class="button primary fit">All users</a></li>
-                <li><a href="/logout" class="button primary fit">Logout</a></li>
+                <li><a href="/ask" class="button styleb fit">Ask your question</a></li>
+                <li><a href="/questions" class="button styleb fit">My question</a></li>
+                <li><a href="/users" class="button styleb fit">All users</a></li>
+                <li><a href="/logout" class="button styleb fit">Logout</a></li>
             </ul>
 
         </div>
