--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -24,8 +24,8 @@
             <h1>You are awesome!</h1>
             <h2>Here, your token: </h2>
             <ul class="actions stacked fit">
-                <li><a class="button primary fit">Copy your token</a></li>
-                <li><a href="/cuteregister" class="button primary fit">Return to login</a></li>
+                <li><a class="button styleb fit">Copy your token</a></li>
+                <li><a href="/cuteregister" class="button styleb fit">Return to login</a></li>
             </ul>
         </div>
 
