--- a/assets/html/users.html
+++ b/assets/html/users.html
@@ -10,7 +10,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/static/css/main.css" />
+    <link rel="stylesheet" href="/static/css/hack.css"/>
     <noscript><link rel="stylesheet" href="/static/css/noscript.css" /></noscript>
+    <style>
+        body {
+            /*color: #ffffff;*/
+            background: rgba(252, 252, 252, 0.7) url("https://live.staticflickr.com/2521/4198754159_cb8a1d7dae_k.jpg") no-repeat;
+            background-size: cover;
+            position: relative;
+            /*background: rgba(252, 252, 252, 0.7) url("https://images.creativemarket.com/0.1.0/ps/7453108/2362/1574/m1/fpnw/wm1/3-.jpg?1576164183&s=f533f17f4470965f792b705ff3bff1e6");*/
+        }
+    </style>
+    <style>
+        .layer {
+            overflow: auto; /* Добавляем полосы прокрутки */
+            max-width: 100vh; /* Ширина блока */
+            max-height: 70vh;
+            padding: 2rem 5rem 3rem 5rem !important;
+        }
+    </style>
 </head>
 <body class="is-preload">
 
@@ -20,7 +38,15 @@
     <!-- One -->
     <section class="banner style1 orient-left content-align-left fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content banner style2 content-align-center orient-center">
-            <ul class="alt">
+            <ul class="alt layer " style="font-weight: bold;">
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
+                <li>This person ask me some question</li>
                 <li>This person ask me some question</li>
                 <li>This person ask me some question</li>
                 <li>This person ask me some question</li>
@@ -34,10 +60,10 @@
         <div class="content">
             <h1>Home Page</h1>
             <ul class="actions stacked fit">
-                <li><a href="/ask" class="button primary fit">Ask your question</a></li>
-                <li><a href="/questions" class="button primary fit">My question</a></li>
-                <li><a href="/users" class="button primary fit">All users</a></li>
-                <li><a href="/logout" class="button primary fit">Logout</a></li>
+                <li><a href="/ask" class="button fit styleb">Ask your question</a></li>
+                <li><a href="/questions" class="button styleb fit">My question</a></li>
+                <li><a href="/users" class="button styleb fit">All users</a></li>
+                <li><a href="/logout" class="button styleb fit">Logout</a></li>
             </ul>
 
         </div>
