--- a/assets/html/homepage.html
+++ b/assets/html/homepage.html
@@ -10,7 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/static/css/main.css" />
+		<link rel="stylesheet" href="/static/css/hack.css" />
 		<noscript><link rel="stylesheet" href="/static/css/noscript.css" /></noscript>
+		<style>
+			body {
+				background-color: #f5e0c3;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -20,18 +26,20 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="image">
-							<img src="/static/images/banner.jpg" alt="" />
+							<img src="/static/images/eye.jpg" alt="" />
 						</div>
+
 						<div class="content">
 							<h1>Home Page</h1>
 							<ul class="actions stacked fit">
-								<li><a href="/ask" class="button primary fit">Ask your question</a></li>
-								<li><a href="/questions" class="button primary fit">My question</a></li>
-								<li><a href="/users" class="button primary fit">All users</a></li>
-								<li><a href="/logout" class="button primary fit">Logout</a></li>
+								<li><a href="/ask" class="button fit styleb">Ask your question</a></li>
+								<li><a href="/questions" class="button styleb fit">My question</a></li>
+								<li><a href="/users" class="button styleb fit">All users</a></li>
+								<li><a href="/logout" class="button styleb fit">Logout</a></li>
 							</ul>
 
 						</div>
+
 
 					</section>
 
