--- a/assets/html/logout.html
+++ b/assets/html/logout.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="/static/css/main.css" />
     <link rel="stylesheet" href="/static/css/hack.css" />
     <noscript><link rel="stylesheet" href="/static/css/noscript.css" /></noscript>
+    <style>
+        body {
+
+            background: rgba(195, 191, 191, 0.6) url("/static/images/black-map.jpg") no-repeat;
+            height: 100%; /* Высота страницы */
+            width: 100%;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body class="is-preload outer">
 
@@ -19,11 +28,14 @@
 <div id="wrapper" class="divided heightmax">
 
     <!-- Five -->
-    <section class="wrapper color1 style1 align-center heightmax padding">
+    <section class="wrapper style1 align-center heightmax padding-small">
         <div class="inner heightmax">
-            <h1>Goodbye my darling</h1>
+            <h1><b>Goodbye my darling</b></h1>
             <h2>You are redirect to homepage after 2 second</h2>
+
+            <img src="/static/images/fortune.gif" style="margin-top: 2em;">
         </div>
+
 
     </section>
 
