--- a/assets/html/answer.html
+++ b/assets/html/answer.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="/static/css/main.css" />
     <link rel="stylesheet" href="/static/css/hack.css" />
     <noscript><link rel="stylesheet" href="/static/css/noscript.css" /></noscript>
+    <style>
+        body {
+
+            background: rgba(195, 191, 191, 0.7) url("/static/images/black-map.jpg") no-repeat;
+            height: 100%; /* Высота страницы */
+            width: 100%;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body class="is-preload outer">
 
@@ -19,13 +28,14 @@
 <div id="wrapper" class="divided heightmax">
 
     <!-- Five -->
-    <section class="wrapper color1 style1 align-center heightmax padding">
-        <div class="inner heightmax">
+    <section class="wrapper style1 align-center heightmax padding-small">
+        <div class="inner heightmax" >
             <h1>My Dear</h1>
             <h2>Your question was very interesting</h2>
-            <h3>Nice user question</h3>
+            <h3 id="question"></h3>
+
             <h2>And after much thought, here is my answer</h2>
-            <h3>Nice answer</h3>
+            <h3 id="answer"></h3>
             <a href="/homepage" class="button styleb fit">Return to homepage</a></li>
 
         </div>
@@ -42,6 +52,13 @@
 <script src="/static/js/breakpoints.min.js"></script>
 <script src="/static/js/util.js"></script>
 <script src="/static/js/main.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#question').text("Nice user question")
+        $('#answer').text("Nice answer")
+    })
+</script>
 
 </body>
 </html>
