--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="/static/css/main.css" />
     <link rel="stylesheet" href="/static/css/hack.css" />
     <noscript><link rel="stylesheet" href="/static/css/noscript.css" /></noscript>
+    <style>
+        body {
+
+            background: rgba(195, 191, 191, 0.7) url("/static/images/black-map.jpg") no-repeat;
+            height: 100%; /* Высота страницы */
+            width: 100%;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body class="is-preload outer">
 
@@ -19,13 +28,13 @@
 <div id="wrapper" class="divided heightmax">
 
     <!-- Five -->
-    <section class="wrapper color1 style1 align-center heightmax padding">
+    <section class="wrapper style1 align-center heightmax padding-small">
         <div class="inner heightmax">
             <h1>You are awesome!</h1>
-            <h2>Here, your token: </h2>
+            <h2>Here, your token: <span id="token"></span></h2>
             <ul class="actions stacked fit">
                 <li><a class="button styleb fit">Copy your token</a></li>
-                <li><a href="/cuteregister" class="button styleb fit">Return to login</a></li>
+                <li><a href="/homepage" class="button styleb fit">Go to magic</a></li>
             </ul>
         </div>
 
@@ -41,6 +50,12 @@
 <script src="/static/js/breakpoints.min.js"></script>
 <script src="/static/js/util.js"></script>
 <script src="/static/js/main.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#token').text("token12345")
+    })
+</script>
 
 </body>
 </html>
