--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -53,7 +53,7 @@
 
 <script>
     $(document).ready(function () {
-        $('#token').text("token12345")
+        $('#token').text(window.location.hash.slice(1))
     })
 </script>
 
