--- a/assets/html/ask.html
+++ b/assets/html/ask.html
@@ -38,8 +38,7 @@
                     <div class="fields">
                         <div class="field">
                             <label for="question"><h2>Your question</h2></label>
-                            <textarea name="question" id="question" rows="1">
-                            </textarea>
+                            <textarea name="question" id="question" rows="1"></textarea>
                             <h2>Сhoose one book</h2>
                         </div>
                         <div class="field">
@@ -55,7 +54,7 @@
 
                     </div>
                 </form>
-                <a href="/answer" class="button styleb fit">Ask question</a>
+                <a class="button styleb fit" id="ask">Ask question</a>
             </div>
         </div>
 
@@ -77,6 +76,7 @@
                 </article>`)
         )
     }
+
     addArticle("/static/images/book3.jpg", "xuy", 90)
     addArticle("/static/images/book2.jpg", "xuy", 52)
     addArticle("/static/images/book1.jpg", "xuy", 15)
@@ -90,20 +90,50 @@
 <script src="/static/js/util.js"></script>
 <script src="/static/js/main.js"></script>
 
+<script>
+
+</script>
+
 <script lang="JavaScript">
     $(document).ready(function () {
         $('article').click(ev => {
             $('article>img').removeClass("stylebook")
             $(ev.target).addClass("stylebook")
             $("#volume-control").attr("max", $(ev.target).attr("x-len"))
-            $("#volume-control").val($("#volume-control").attr("max")/2).trigger("input")
+            $("#volume-control").val($("#volume-control").attr("max") / 2).trigger("input")
         });
 
-        $('#volume-control').on("input", function() {
+        $('#volume-control').on("input", function () {
             $('#box-range').val(this.value);
         }).trigger("change");
+
+
+        $('#ask').click(function() {
+
+            $.ajax({
+                url: '/api/v1/users/questions/ask',
+                type: 'post',
+                dataType: 'json',
+                data: {
+                    "book": $(".stylebook").attr("x-data"),
+                    "question": $('#question').serialize(),
+                    "page": $("#volume-control").val(),
+                },
+                success: function (data) {
+                    console.log(data);
+                    window.location.href = data['redirect'];
+                },
+                error: function (data) {
+                    console.log(data)
+                }
+            });
+        })
+
     })
+
 </script>
+
+>
 
 </body>
 </html>
