--- a/assets/html/questions.html
+++ b/assets/html/questions.html
@@ -42,39 +42,7 @@
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 
         <div class="content layer" style="font-weight: bold;">
-            <dl>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
-                <dt>The rain pelted the windshield as the darkness engulfed us</dt>
-                <dd>
-                    <p>The young man wanted a role model. He looked long and hard in his youth, but that role model never materialized. His only choice was to embrace all the people in his life he didn't want to be like.</p>
-                </dd>
+            <dl id="list_questions">
                 <dt>Question</dt>
                 <dd>
                     <p>Answer</p>
@@ -83,7 +51,7 @@
 
         </div>
         <div class="content">
-            <h1 >Home Page</h1>
+            <h1>Home Page</h1>
             <ul class="actions stacked fit">
                 <li><a href="/ask" class="button styleb fit">Ask your question</a></li>
                 <li><a href="/questions" class="button styleb fit">My question</a></li>
@@ -105,6 +73,33 @@
 <script src="/static/js/breakpoints.min.js"></script>
 <script src="/static/js/util.js"></script>
 <script src="/static/js/main.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/api/v1/users/questions',
+            type: 'get',
+            dataType: 'json',
+            success: function (data) {
+                console.log(data);
+                data['questions'].forEach(function (el) {
+                    console.log(el);
+                    $("#list_questions").append(
+                        $(`
+                        <dt>${el["Question"]}</dt>
+                        <dd>
+                            <p>${el["Answer"]}</p>
+                        </dd>
+                        `)
+                    )
+                });
+            },
+            error: function (data) {
+                console.log(data)
+            }
+        });
+    })
+</script>
 
 </body>
 </html>
