--- a/assets/html/questions.html
+++ b/assets/html/questions.html
@@ -42,12 +42,7 @@
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 
         <div class="content layer" style="font-weight: bold;">
-            <dl id="list_questions">
-                <dt>Question</dt>
-                <dd>
-                    <p>Answer</p>
-                </dd>
-            </dl>
+            <dl id="list_questions"></dl>
 
         </div>
         <div class="content">
