--- a/assets/html/ask.html
+++ b/assets/html/ask.html
@@ -16,11 +16,9 @@
     </noscript>
     <style>
         body {
-            /*color: #ffffff;*/
             background: rgba(252, 252, 252, 0.7) url("https://live.staticflickr.com/2521/4198754159_cb8a1d7dae_k.jpg") no-repeat;
             background-size: cover;
             position: relative;
-            /*background: rgba(252, 252, 252, 0.7) url("https://images.creativemarket.com/0.1.0/ps/7453108/2362/1574/m1/fpnw/wm1/3-.jpg?1576164183&s=f533f17f4470965f792b705ff3bff1e6");*/
         }
     </style>
 </head>
@@ -66,6 +64,7 @@
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/jquery.scrollex.min.js"></script>
 <script src="/static/js/jquery.scrolly.min.js"></script>
+<script src="/static/js/hacks.js"></script>
 
 <script lang="JavaScript">
     function addArticle(name, data, len) {
@@ -101,23 +100,12 @@
             }
         });
     });
-
-    // addArticle("/static/images/book3.jpg", "xuy", 90)
-    // addArticle("/static/images/book2.jpg", "xuy", 52)
-    // addArticle("/static/images/book1.jpg", "xuy", 15)
-    // addArticle("/static/images/book3.jpg", "xuy", 52)
-    // addArticle("/static/images/book2.jpg", "xuy", 52)
-    // addArticle("/static/images/book2.jpg", "xuy", 52)
 </script>
 
 <script src="/static/js/browser.min.js"></script>
 <script src="/static/js/breakpoints.min.js"></script>
 <script src="/static/js/util.js"></script>
 <script src="/static/js/main.js"></script>
-
-<script>
-
-</script>
 
 <script lang="JavaScript">
     $(document).ready(function () {
@@ -140,6 +128,7 @@
                     window.location.href = data['redirect'];
                 },
                 error: function (data) {
+                    alertFunction("Try again!")
                     console.log(data)
                 }
             });
