--- a/assets/html/questions.html
+++ b/assets/html/questions.html
@@ -16,11 +16,9 @@
     </noscript>
     <style>
         body {
-            /*color: #ffffff;*/
             background: rgba(252, 252, 252, 0.7) url("https://live.staticflickr.com/2521/4198754159_cb8a1d7dae_k.jpg") no-repeat;
             background-size: cover;
             position: relative;
-            /*background: rgba(252, 252, 252, 0.7) url("https://images.creativemarket.com/0.1.0/ps/7453108/2362/1574/m1/fpnw/wm1/3-.jpg?1576164183&s=f533f17f4470965f792b705ff3bff1e6");*/
         }
     </style>
     <style>
@@ -75,6 +73,9 @@
             url: '/api/v1/users/questions',
             type: 'get',
             dataType: 'json',
+            data: {
+                "username": window.location.hash.slice(1),
+            },
             success: function (data) {
                 console.log(data);
                 data['questions'].forEach(function (el) {
